modifications throughout; qualified section done

--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -5,11 +5,50 @@
     <li>
       <a href="#Collection">prov:Collection</a>
     </li>
+    <li>
+      <a href="#CollectionInvolvement">prov:CollectionInvolvement</a>
+    </li>
+    <li>
+      <a href="#EmptyCollection">prov:EmptyCollection</a>
+    </li>
+    <li>
+      <a href="#Insertion">prov:Insertion</a>
+    </li>
+    <li>
+      <a href="#KeyValuePair">prov:KeyValuePair</a>
+    </li>
+    <li>
+      <a href="#Removal">prov:Removal</a>
+    </li>
   </ul>
 </div>
 
 <div    id="prov-collections-owl-properties-at-a-glance"
      class="prov-collections owl-properties at-a-glance">
   <ul class="hlist">
+    <li class="object-property">
+      <a href="#derivedByInsertionFrom">prov:derivedByInsertionFrom</a>
+    </li>
+    <li class="object-property">
+      <a href="#derivedByRemovalFrom">prov:derivedByRemovalFrom</a>
+    </li>
+    <li class="object-property">
+      <a href="#inserted">prov:inserted</a>
+    </li>
+    <li class="datatype-property">
+      <a href="#key">prov:key</a>
+    </li>
+    <li class="object-property">
+      <a href="#knownMember">prov:knownMember</a>
+    </li>
+    <li class="object-property">
+      <a href="#qualifiedInsertion">prov:qualifiedInsertion</a>
+    </li>
+    <li class="object-property">
+      <a href="#qualifiedRemoval">prov:qualifiedRemoval</a>
+    </li>
+    <li class="object-property">
+      <a href="#value">prov:value</a>
+    </li>
   </ul>
 </div>
