--- a/components/services/prov-o/includes/at-a-glance-expanded.html
+++ b/components/services/prov-o/includes/at-a-glance-expanded.html
@@ -3,7 +3,7 @@
      class="prov-expanded owl-classes at-a-glance">
   <ul class="hlist">
     <li>
-      <a href="#Bundle">prov:Bundle</a>
+      <a href="#Account">prov:Account</a>
     </li>
     <li>
       <a href="#Location">prov:Location</a>
