--- a/components/services/prov-o/includes/at-a-glance-qualified.html
+++ b/components/services/prov-o/includes/at-a-glance-qualified.html
@@ -15,6 +15,9 @@
       <a href="#Attribution">prov:Attribution</a>
     </li>
     <li>
+      <a href="#Communication">prov:Communication</a>
+    </li>
+    <li>
       <a href="#Derivation">prov:Derivation</a>
     </li>
     <li>
@@ -25,9 +28,6 @@
     </li>
     <li>
       <a href="#Generation">prov:Generation</a>
-    </li>
-    <li>
-      <a href="#Inform">prov:Inform</a>
     </li>
     <li>
       <a href="#InstantaneousEvent">prov:InstantaneousEvent</a>
@@ -84,16 +84,25 @@
       <a href="#entity">prov:entity</a>
     </li>
     <li class="object-property">
+      <a href="#hadActivity">prov:hadActivity</a>
+    </li>
+    <li class="object-property">
+      <a href="#hadGeneration">prov:hadGeneration</a>
+    </li>
+    <li class="object-property">
       <a href="#hadPlan">prov:hadPlan</a>
     </li>
     <li class="object-property">
-      <a href="#hadQuotedAgent">prov:hadQuotedAgent</a>
+      <a href="#hadQuoted">prov:hadQuoted</a>
     </li>
     <li class="object-property">
-      <a href="#hadQuoterAgent">prov:hadQuoterAgent</a>
+      <a href="#hadQuoter">prov:hadQuoter</a>
     </li>
     <li class="object-property">
       <a href="#hadRole">prov:hadRole</a>
+    </li>
+    <li class="object-property">
+      <a href="#hadUsage">prov:hadUsage</a>
     </li>
     <li class="object-property">
       <a href="#involved">prov:involved</a>
@@ -105,6 +114,9 @@
       <a href="#qualifiedAttribution">prov:qualifiedAttribution</a>
     </li>
     <li class="object-property">
+      <a href="#qualifiedCommunication">prov:qualifiedCommunication</a>
+    </li>
+    <li class="object-property">
       <a href="#qualifiedDerivation">prov:qualifiedDerivation</a>
     </li>
     <li class="object-property">
@@ -112,9 +124,6 @@
     </li>
     <li class="object-property">
       <a href="#qualifiedGeneration">prov:qualifiedGeneration</a>
-    </li>
-    <li class="object-property">
-      <a href="#qualifiedInform">prov:qualifiedInform</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedQuotation">prov:qualifiedQuotation</a>
@@ -139,6 +148,9 @@
     </li>
     <li class="object-property">
       <a href="#qualifiedUsage">prov:qualifiedUsage</a>
+    </li>
+    <li class="object-property">
+      <a href="#responsibleForActivity">prov:responsibleForActivity</a>
     </li>
   </ul>
 </div>
