--- a/components/services/prov-o/includes/qualifed-forms-starting-point.html
+++ b/components/services/prov-o/includes/qualifed-forms-starting-point.html
@@ -37,8 +37,8 @@
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedInform" href="#qualifiedInform" class="owlclass">prov:qualifiedInform</a></td>
-    <td><a title="http://www.w3.org/ns/prov#Inform" href="#Inform" class="owlclass">prov:Inform</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication" class="owlclass">prov:qualifiedCommunication</a></td>
+    <td><a title="http://www.w3.org/ns/prov#Communication" href="#Communication" class="owlclass">prov:Communication</a></td>
   </tr>
   <tr>
     <td><a title="http://www.w3.org/ns/prov#wasStartedByActivity" href="#wasStartedByActivity" class="owlclass">prov:wasStartedByActivity</a></td>
