--- a/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
@@ -1,4 +1,4 @@
-     <section id="description-collections"> <!-- section 3.1 -->
+     <section id="description-collections-terms"> <!-- section 3.1 -->
        <!-- This section is version controlled at http://dvcs.w3.org/hg/prov/file/tip/ontology and mirroed to
              https://github.com/timrdf/prov-lodspeakr/tree/master/components/services/prov-o -->
        <h3>Collections Terms</h3>
