--- a/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-expanded-terms.inc.html
@@ -1,9 +1,13 @@
      <section id="description-expanded-terms">
 	  	<h3>Expanded Terms</h3>
         <p>        
+         Terms for expressing <strong>expanded relationships</strong>, are for users who want to express more detailed provenance, in a more precise manner.For exampl
+e, instead of simply stating that one entity was derived from another one, one can specify more specifically that one actually was a revision of, source of, or quotation
+of the other entity.
+
 This section presents the rest of classes and properties textually without using a diagram. We may use some examples in English. 
 The classes and properties covered in this section are: 
 Note, hasAnnotation, tracedTo, wasRevisionOf, hadOriginalSource, wasQuotatedFrom, hadQuotatedAgent, hadQuoterAgent, wasSummaryOf, alternateOf, terms related to Collection? Bundle? Role?? , hadRole, Location??, hadLocation?, wasStartedByActivity?? specializationOf?
 
 		</p>
-	  </section> < !-- Expaned Terms subsection -->
+	  </section>
