added expanded section, cleaned example divs

--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -18,6 +18,9 @@
       <a href="#KeyValuePair">prov:KeyValuePair</a>
     </li>
     <li>
+      <a href="#Membership">prov:Membership</a>
+    </li>
+    <li>
       <a href="#Removal">prov:Removal</a>
     </li>
   </ul>
@@ -39,7 +42,10 @@
       <a href="#key">prov:key</a>
     </li>
     <li class="object-property">
-      <a href="#knownMember">prov:knownMember</a>
+      <a href="#knownMembership">prov:knownMembership</a>
+    </li>
+    <li class="object-property">
+      <a href="#member">prov:member</a>
     </li>
     <li class="object-property">
       <a href="#qualifiedInsertion">prov:qualifiedInsertion</a>
