--- a/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-collections.inc.html
@@ -1,7 +1,7 @@
      <section id="description-collections"> <!-- section 3.1 -->
        <!-- This section is version controlled at http://dvcs.w3.org/hg/prov/file/tip/ontology and mirroed to
              https://github.com/timrdf/prov-lodspeakr/tree/master/components/services/prov-o -->
-       <h3>Collections</h3>
+       <h3>Collections Terms</h3>
        <p><em>
         A collection is an entity that provides a structure to some
         constituents, which are themselves entities. These constituents
